--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
-  movies:
-    train: bhatthi/moviesrepopaytm:latest
+  train:
+    train: bhatthi/trainrepopaytm:latest
     ports:
       - "80:80"
     deploy:
